# numerobis

./: .clangd  .gitattributes  .gitignore  LICENSE  Makefile  README.md  analysis.py  ast.json  astnodes.py  classes.py  declare.py  dimchecker.py  environment.py  exceptions.py  grammar.lark  lex.py  lexer.py  main.py  module.py  module_resolver.py  module_system.py  parser.py  pyproject.toml  run.py  test.und  typechecker.py  unitparser.py  utils.py
analysis/: canonicalize.py  dimchecker.py  invert.py  preprocessor.py  simplifier.py
archive/: grammar.lark  lexer.py  parser-v2.py  tokens.lex
compiler/: build_lib.py  compiler.py  constants.py  gcc.py  linker.py  scoping.py  tstr.py  utils.py
examples/: ball.nbis  boiling.nbis  caesar.nbis  factorial.nbis  fibonacci.nbis  guessing.nbis  keyboard.nbis  matrix.nbis  mco.nbis  orbit.nbis  plot.nbis  scaling.nbis  sieve.nbis  sieve.und
exceptions/: exceptions.py  messages.txt  msgparser.py
lexer/: lexer.py
nodes/: ast.py  core.py  unit.py
parser/: parser.py  template.py  unitparser.py
runtime/: build_lib.py
scripts/: build.ps1  build.sh  gc.ps1  gc.sh
stdlib/: basic_si.und  builtins.und  custom.und  imperial.und  minimal_si.und  si.und
tests/: advanced-functions.nbis  advanced-functions.und  algebra.und  arithmetic.nbis  arithmetic.und  calculations.nbis  calculations.und  comparisons.nbis  comparisons.und  compile.und  conditionals.nbis  conditionals.und  conversions.nbis  conversions.und  dimensions.nbis  dimensions.und  echo.nbis  echo.und  edgecases.nbis  edgecases.und  engineering.und  expressions.nbis  expressions.und  functions.nbis  functions.und  generics.nbis  generics.und  imports.und  (+32 more)
(+193 files in other folders)
